fixed layout issues in main

--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -16,8 +16,12 @@ nav {
 }
 
 main {
-	width: 850px;
-	margin: 35px auto;
+	margin: 35px 50px;
+}
+
+#game {
+	max-width: 850px;
+	margin: 35px auto ;
 }
 
 h1 {
